# OAT

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/matrices/: matrix_oracle.rs  mod.rs
src/matrices/implementors/: ESSENTIAL_TO_DO.md  compressed_sparse.rs  csm.rs  mod.rs  scalar_matrices.rs  vec_of_csvec.rs  vec_of_vec.rs
src/matrix_factorization/: inversion.rs  mod.rs  umatch.rs  vec_of_vec.rs
src/rings/: field.rs  field_prime.rs  mod.rs  ring.rs  ring_native.rs
src/utilities/: combinatorics.rs  indexing_and_bijection.rs  mod.rs  ring.rs  sequences_and_ordinals.rs  statistics.rs
src/utilities/cell_complexes/: mod.rs
src/utilities/cell_complexes/simplices_unweighted/: boundary_matrices.rs  facets.rs  mod.rs  simplex.rs
src/utilities/heaps/: heap.rs  mod.rs
src/utilities/iterators/: hit_merge.rs  mod.rs  utility.rs
src/vector_entries/: mod.rs  vector_entries.rs
src/vectors/: mod.rs  vector_transforms.rs
src/vectors/implementors/: csv.rs
