[package]
name = "solar"
version = "0.1.0"
authors = ["Gregory <greg.henselman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
num-traits = "0.2.14"
itertools = "0.10.0"
rand = "0.8.3"
auto_impl = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.42"
